--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,65 @@
 # ----------------------------------------------------------------------
-# Common build directories (language-agnostic)
+# Rust specific - prioritized
 # ----------------------------------------------------------------------
-/build/
-/builds/
-/out/
-/output/
-/dist/
-/bin/
-/obj/
-/lib/
-/_build/
-/build-*/
-/cmake-build-*/
-/Release/
-/Debug/
-/RelWithDebInfo/
-/MinSizeRel/
-/.build/
-/.cache/
-/artifacts/
-
-# ----------------------------------------------------------------------
-# Rust specific
-# ----------------------------------------------------------------------
-# Cargo build directory
+# Rust build directory - exclude all compilation artifacts
 /target/
 /*/target/
 **/target/
 
-# Cargo dependency cache
-/.cargo/
-/.cargo-cache/
+# Allow Cargo.lock for binary projects, exclude for libraries
+# Uncomment the next line if this is a library
+# Cargo.lock
 
-# Incremental compilation artifacts
+# Keep essential Cargo files
+!Cargo.toml
+
+# Rust-specific generated files
 **/*.rs.bk
 **/incremental/
 **/incremental-*/
-target/*/incremental
 
-# Documentation
-/target/doc/
-/doc/
-
-# IDE integration
-rust-project.json
-
-# Generated files
-Cargo.lock
-# Keep Cargo.lock for binaries, remove for libraries
-# Uncomment next line if this is a library
-# !Cargo.lock
-
-# Profiling and analysis
+# Rust profiling and analysis
 perf.data
 perf.data.old
 callgrind.out.*
 *.speedscope.json
 flamegraph.svg
+
+# ----------------------------------------------------------------------
+# Python specific
+# ----------------------------------------------------------------------
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Distribution / packaging
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Virtual environments - keep only requirements.txt
+env/
+venv/
+ENV/
+.env/
+.venv/
+env.bak/
+venv.bak/
+.python-version
+pyvenv.cfg
+!requirements.txt
+
+# Jupyter Notebook
+.ipynb_checkpoints
 
 # ----------------------------------------------------------------------
 # C/C++ specific
@@ -68,11 +71,6 @@ flamegraph.svg
 *.elf
 *.lo
 *.slo
-
-# Linker output
-*.ilk
-*.map
-*.exp
 
 # Precompiled headers
 *.gch
@@ -112,21 +110,16 @@ CTestTestfile.cmake
 CMakeScripts/
 compile_commands.json
 _deps/
-CMakeLists.txt.user
-*.cmake
-!conan.cmake
-!vcpkg.cmake
-!Find*.cmake
-*-config.cmake
-*-config-version.cmake
-install_manifest.txt
+CMakeFiles/
+# Keep CMakeLists.txt
+!CMakeLists.txt
+!*.cmake
 
 # Build systems
-# Make
+# Makefiles - but keep the main one
 Makefile.in
-Makefile
 *.make
-!CMakeLists.txt
+!Makefile
 !*.mk
 !*.pri
 !*.pro
@@ -136,120 +129,40 @@ Makefile
 .ninja_log
 build.ninja
 
-# Meson
-meson-info/
-meson-logs/
-meson-private/
-meson_benchmark_setup.dat
-meson_test_setup.dat
-.mesonpy-native-file.ini
-
-# Autotools
-autom4te.cache/
-config.guess
-config.sub
-config.status
-config.log
-configure
-aclocal.m4
-*.m4
-autoscan.log
-configure.scan
-depcomp
-install-sh
-missing
-stamp-h1
-libtool
-ltmain.sh
-
-# Package managers
-# Conan
-conanbuildinfo.*
-conaninfo.txt
-conan.lock
-graph_info.json
-conan/
-!conanfile.py
-!conanfile.txt
-
-# vcpkg
-vcpkg/
-vcpkg_installed/
-vcpkg.json
-!vcpkg.json
-
 # ----------------------------------------------------------------------
-# Python specific
+# Zig specific
 # ----------------------------------------------------------------------
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.nox/
-
-# Distribution / packaging
-.Python
-develop-eggs/
-downloads/
-eggs/
-.eggs/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-dist/
+zig-cache/
+zig-out/
+release/
+debug/
+build-*/
 build/
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Virtual environments
-env/
-venv/
-ENV/
-.env/
-.venv/
-env.bak/
-venv.bak/
-.python-version
-pyvenv.cfg
-
-# Jupyter Notebook
-.ipynb_checkpoints
+# Keep build.zig files
+!build.zig
+!build.zig.zon
 
 # ----------------------------------------------------------------------
-# Go specific
+# Common build directories (language-agnostic)
 # ----------------------------------------------------------------------
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Go workspace files
-go.work
-go.work.sum
-
-# Go packages & modules
-/vendor/
-/Godeps/
-/go.sum
-# Keep go.mod
-!go.mod
-
-# Go build cache
-/.go/
-
-# Incremental build output
-/_obj/
-/_test/
-/_testmain.go
+/build/
+/builds/
+/out/
+/output/
+/dist/
+/bin/
+/obj/
+/lib/
+/_build/
+/build-*/
+/cmake-build-*/
+/Release/
+/Debug/
+/RelWithDebInfo/
+/MinSizeRel/
+/.build/
+/.cache/
+/artifacts/
 
 # ----------------------------------------------------------------------
 # IDE & Editor specific
@@ -345,18 +258,6 @@ $RECYCLE.BIN/
 # ----------------------------------------------------------------------
 # Misc
 # ----------------------------------------------------------------------
-# Archives
-*.7z
-*.gz
-*.tgz
-*.bzip
-*.bz2
-*.xz
-*.lzma
-*.zip
-*.rar
-*.tar
-
 # Logs
 *.log
 logs/
@@ -365,18 +266,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
 # Temporary files
 tmp/
 temp/
 .temp/
 .tmp/
-target/
+
 # Local configuration files
 .env.local
 .env.development.local
@@ -385,3 +280,65 @@ target/
 local.properties
 config.local.json
 settings.local.json
+
+# ----------------------------------------------------------------------
+# Rust specific - additional patterns
+# ----------------------------------------------------------------------
+# Rust documentation
+/target/doc/
+/doc/
+
+# Rust benchmarks compiled output
+/target/*/bench/
+/benches/target/
+
+# Cargo registry cache
+.cargo/registry/
+.cargo/git/
+
+# Rust-Analyzer specific
+rust-project.json
+rust-analyzer.json
+ra_*.json
+
+# Allow Cargo config file to ensure reproducible builds
+!.cargo/config.toml
+!.cargo/config
+
+# ----------------------------------------------------------------------
+# Dependency management
+# ----------------------------------------------------------------------
+# Explicitly allow dependency lock files for reproducible builds
+!Cargo.lock
+!requirements.lock
+!yarn.lock
+!package-lock.json
+!Pipfile.lock
+!poetry.lock
+!conanfile.py
+!conanfile.txt
+
+# ----------------------------------------------------------------------
+# Keep important build files
+# ----------------------------------------------------------------------
+# Build scripts and configuration
+!build.rs
+!**/build.rs
+!.rustfmt.toml
+!rustfmt.toml
+!clippy.toml
+!.clippy.toml
+!Cross.toml
+!cross.toml
+
+# Zig package management
+!deps.zig
+
+# C/C++ build configuration
+!configure
+!configure.ac
+!configure.in
+!config.h.in
+!*.pc.in
+!.clang-format
+!.clang-tidy
