--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,21 @@
-# ----------------------------------------------------------------------
-# Rust specific - prioritized
-# ----------------------------------------------------------------------
-# Rust build directory - exclude all compilation artifacts
+# ==============================================================================
+# RUST SPECIFIC
+# ==============================================================================
+# Build artifacts and target directory
 /target/
 /*/target/
 **/target/
 
-# Allow Cargo.lock for binary projects, exclude for libraries
-# Uncomment the next line if this is a library
+# Cargo lock for binary projects (keep it)
 # Cargo.lock
-
-# Keep essential Cargo files
-!Cargo.toml
 
 # Rust-specific generated files
 **/*.rs.bk
 **/incremental/
 **/incremental-*/
+
+# Rust documentation
+/target/doc/
 
 # Rust profiling and analysis
 perf.data
@@ -25,45 +24,22 @@ callgrind.out.*
 *.speedscope.json
 flamegraph.svg
 
-# ----------------------------------------------------------------------
-# Python specific
-# ----------------------------------------------------------------------
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.nox/
+# Rust-analyzer
+rust-project.json
+rust-analyzer.json
+ra_*.json
 
-# Distribution / packaging
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-pip-log.txt
-pip-delete-this-directory.txt
+# Cargo registry cache
+.cargo/registry/
+.cargo/git/
 
-# Virtual environments - keep only requirements.txt
-env/
-venv/
-ENV/
-.env/
-.venv/
-env.bak/
-venv.bak/
-.python-version
-pyvenv.cfg
-!requirements.txt
+# Keep Cargo config
+!.cargo/config.toml
+!.cargo/config
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# ----------------------------------------------------------------------
-# C/C++ specific
-# ----------------------------------------------------------------------
+# ==============================================================================
+# C/C++ SPECIFIC
+# ==============================================================================
 # Object files
 *.o
 *.ko
@@ -81,7 +57,6 @@ pyvenv.cfg
 *.a
 *.la
 *.lai
-*.lo
 *.so
 *.so.*
 *.dylib
@@ -110,75 +85,401 @@ CTestTestfile.cmake
 CMakeScripts/
 compile_commands.json
 _deps/
-CMakeFiles/
 # Keep CMakeLists.txt
 !CMakeLists.txt
 !*.cmake
 
-# Build systems
-# Makefiles - but keep the main one
+# Makefiles (keep main ones)
 Makefile.in
 *.make
 !Makefile
 !*.mk
-!*.pri
-!*.pro
 
 # Ninja
 .ninja_deps
 .ninja_log
 build.ninja
 
-# ----------------------------------------------------------------------
-# Zig specific
-# ----------------------------------------------------------------------
+# ==============================================================================
+# ZIG SPECIFIC
+# ==============================================================================
 zig-cache/
 zig-out/
 release/
 debug/
 build-*/
-build/
 # Keep build.zig files
 !build.zig
 !build.zig.zon
 
-# ----------------------------------------------------------------------
-# Common build directories (language-agnostic)
-# ----------------------------------------------------------------------
-/build/
-/builds/
-/out/
-/output/
-/dist/
-/bin/
-/obj/
-/lib/
-/_build/
-/build-*/
-/cmake-build-*/
-/Release/
-/Debug/
-/RelWithDebInfo/
-/MinSizeRel/
-/.build/
-/.cache/
-/artifacts/
+# ==============================================================================
+# PYTHON SPECIFIC
+# ==============================================================================
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# ----------------------------------------------------------------------
-# IDE & Editor specific
-# ----------------------------------------------------------------------
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# ==============================================================================
+# KOTLIN SPECIFIC
+# ==============================================================================
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Gradle
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+# ==============================================================================
+# WEB DEVELOPMENT SPECIFIC
+# ==============================================================================
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons
+build/Release
+
+# Dependency directories
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+out/
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# Webpack
+.webpack/
+
+# Rollup
+.rollup.cache/
+
+# Vite
+.vite/
+
+# SvelteKit
+.svelte-kit/
+
+# Astro
+.astro/
+
+# Remix
+.remix/
+
+# ==============================================================================
+# FRONTEND FRAMEWORKS & TOOLS
+# ==============================================================================
+
+# React
+# Build outputs are typically in build/ or dist/ (covered above)
+
+# Vue.js
+*.local
+
+# Angular
+/dist/
+/tmp/
+/out-tsc/
+/bazel-out
+
+# Angular CLI cache
+.angular/
+
+# Storybook build outputs
+storybook-static
+
+# Temporary folders
+.tmp/
+.temp/
+
+# ==============================================================================
+# CSS/SASS/LESS
+# ==============================================================================
+# Sass
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
+
+# Less
+*.less.map
+
+# Stylus
+*.styl.map
+
+# PostCSS
+.postcssrc.js
+
+# ==============================================================================
+# PACKAGE MANAGERS
+# ==============================================================================
+# npm
+package-lock.json
+
+# Yarn
+yarn.lock
+
+# pnpm
+pnpm-lock.yaml
+
+# Bun
+bun.lockb
+
+# ==============================================================================
+# TESTING
+# ==============================================================================
+# Jest
+coverage/
+.jest/
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
+# Cypress
+cypress/videos/
+cypress/screenshots/
+
+# ==============================================================================
+# DEVELOPMENT SERVERS & TOOLS
+# ==============================================================================
+# Local development
+.env.development
+.env.staging
+.env.production
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
+# Turbo
+.turbo/
+
+# Vercel
+.vercel
+
+# Netlify
+.netlify/
+
+# ==============================================================================
+# WEBASSEMBLY
+# ==============================================================================
+# WebAssembly
+*.wasm
+*.wat
+
+# wasm-pack
+pkg/
+
+# ==============================================================================
+# ELECTRON
+# ==============================================================================
+# Electron
+/dist_electron/
+
+# ==============================================================================
+# IDE & EDITOR SPECIFIC
+# ==============================================================================
 # Visual Studio Code
 .vscode/
 *.code-workspace
 .history/
 
-# JetBrains (IntelliJ/CLion/GoLand/PyCharm/etc)
+# JetBrains IDEs
 .idea/
 *.iml
 *.ipr
 *.iws
 .idea_modules/
-out/
 cmake-build-*/
 
 # Visual Studio
@@ -190,10 +491,6 @@ cmake-build-*/
 *.userprefs
 *.VC.db
 *.VC.opendb
-*.psess
-*.vsp
-*.vspx
-*.vcxproj.filters
 
 # Xcode
 *.pbxuser
@@ -209,8 +506,6 @@ xcuserdata/
 *.moved-aside
 DerivedData/
 *.xcuserstate
-*.xcworkspace
-!default.xcworkspace
 
 # Eclipse
 .settings/
@@ -219,19 +514,22 @@ DerivedData/
 .classpath
 .buildpath
 
-# Generic editor backups
-*~
-*.bak
+# Vim/Neovim
 *.swp
 *.swo
 .*.swp
 .*.swo
-\#*\#
-.#*
+*~
+.netrwhist
 
-# ----------------------------------------------------------------------
-# OS specific
-# ----------------------------------------------------------------------
+# Emacs
+*~
+\#*\#
+.\#*
+
+# ==============================================================================
+# OS SPECIFIC
+# ==============================================================================
 # macOS
 .DS_Store
 .AppleDouble
@@ -255,10 +553,70 @@ $RECYCLE.BIN/
 .directory
 .Trash-*
 
-# ----------------------------------------------------------------------
-# Misc
-# ----------------------------------------------------------------------
-# Logs
+# ==============================================================================
+# GAME/GRAPHICS DEVELOPMENT SPECIFIC
+# ==============================================================================
+# Shader compilation
+*.spv
+*.spirv
+
+# Texture files (source formats that generate others)
+*.psd
+*.xcf
+*.kra
+*.aseprite
+
+# 3D model source files
+*.blend
+*.blend1
+*.blend2
+*.max
+*.ma
+*.mb
+*.fbx
+
+# Audio source files
+*.aup
+*.aup3
+*.reapeaks
+
+# Texture cache
+*.dds
+*.ktx
+*.ktx2
+
+# Screenshots and recordings
+screenshots/
+recordings/
+captures/
+
+# Asset processing cache
+.asset_cache/
+.import/
+
+# ==============================================================================
+# COMMON BUILD DIRECTORIES
+# ==============================================================================
+/build/
+/builds/
+/out/
+/output/
+/dist/
+/bin/
+/obj/
+/lib/
+/_build/
+/.build/
+/.cache/
+/artifacts/
+/Release/
+/Debug/
+/RelWithDebInfo/
+/MinSizeRel/
+
+# ==============================================================================
+# LOGS AND TEMPORARY FILES
+# ==============================================================================
 *.log
 logs/
 log/
@@ -272,73 +630,60 @@ temp/
 .temp/
 .tmp/
 
-# Local configuration files
+# ==============================================================================
+# LOCAL CONFIGURATION
+# ==============================================================================
+# Environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Local config files
 local.properties
 config.local.json
 settings.local.json
+.config/local/
 
-# ----------------------------------------------------------------------
-# Rust specific - additional patterns
-# ----------------------------------------------------------------------
-# Rust documentation
-/target/doc/
-/doc/
+# ==============================================================================
+# PROFILING AND DEBUGGING
+# ==============================================================================
+# Performance profiling
+*.prof
+*.trace
+massif.out.*
+cachegrind.out.*
+callgrind.out.*
+heaptrack.*
 
-# Rust benchmarks compiled output
-/target/*/bench/
-/benches/target/
+# Core dumps
+core
+core.*
 
-# Cargo registry cache
-.cargo/registry/
-.cargo/git/
+# Valgrind
+vgcore.*
 
-# Rust-Analyzer specific
-rust-project.json
-rust-analyzer.json
-ra_*.json
-
-# Allow Cargo config file to ensure reproducible builds
-!.cargo/config.toml
-!.cargo/config
-
-# ----------------------------------------------------------------------
-# Dependency management
-# ----------------------------------------------------------------------
-# Explicitly allow dependency lock files for reproducible builds
+# ==============================================================================
+# KEEP IMPORTANT FILES
+# ==============================================================================
+# Build configuration files
+!Cargo.toml
 !Cargo.lock
-!requirements.lock
-!yarn.lock
-!package-lock.json
-!Pipfile.lock
-!poetry.lock
-!conanfile.py
-!conanfile.txt
-
-# ----------------------------------------------------------------------
-# Keep important build files
-# ----------------------------------------------------------------------
-# Build scripts and configuration
 !build.rs
 !**/build.rs
+!CMakeLists.txt
+!Makefile
+!build.zig
+!build.zig.zon
+!requirements.txt
+!pyproject.toml
+!setup.py
+
+# Configuration files
 !.rustfmt.toml
 !rustfmt.toml
 !clippy.toml
 !.clippy.toml
-!Cross.toml
-!cross.toml
-
-# Zig package management
-!deps.zig
-
-# C/C++ build configuration
-!configure
-!configure.ac
-!configure.in
-!config.h.in
-!*.pc.in
 !.clang-format
 !.clang-tidy
